--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -1,4 +1,17 @@
-{% extends "network/lay.html" %}
+{% extends "network/layout.html" %}
 
 {% block body %}
+    <h3>All Posts</h3>
+    
+    {% if user.is_authenticated %}
+    <form class="new" action="{% url 'index' %}" method="post">
+        {% csrf_token %}
+        <img src='{{ user.image.url }}' alt='Profile Image' class='prof_img'>
+        <input class="new_post shadow mb-5 bg-body-tertiary rounded" name="post" autofocus autocomplete="off" placeholder="What's happening, {{user.username}}?">
+        <input type="submit" class="post" value="Post">
+    </form>
+    {%endif%}
+    <div class="main">
+
+    </div>
 {% endblock %}
