--- a/project4/network/templates/network/register.html
+++ b/project4/network/templates/network/register.html
@@ -1,4 +1,4 @@
-{% extends "network/lay.html" %}
+{% extends "network/layout.html" %}
 
 {% block body %}
 
@@ -8,11 +8,12 @@
         <div>{{ message }}</div>
     {% endif %}
 
-    <form action="{% url 'register' %}" method="post">
+    <form action="{% url 'register' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
             <input class="form-control" autofocus type="text" name="username" placeholder="Username">
         </div>
+        <label for="image" class="custom-input"> Choose profile image (optional)<input type="file" name="image" id="image"></label>
         <div class="form-group">
             <input class="form-control" type="email" name="email" placeholder="Email Address">
         </div>
