--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -5,7 +5,7 @@
     <head>
         <title>{% block title %}Social Network{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'network/st.css' %}" rel="stylesheet">
+        <link href="{% static 'network/f.css' %}" rel="stylesheet">
     </head>
     <body>
       <div class="navigation_bar shadow-sm p-3 mb-5 bg-body-tertiary rounded">
@@ -17,7 +17,7 @@
               <a  href="{% url 'index' %}" class="n_link"><img class="icon" src="{% static 'network/house-heart-fill.svg' %}">All Posts</a>
             {% if user.is_authenticated %}
               <a href="#" class="n_link"><img class="icon" src="{% static 'network/hash.svg' %}">Following</a>
-              <a href="#" class="n_link"><img class="icon" src="{% static 'network/person-fill.svg' %}">Profile</a>
+              <a href="{% url 'profile' user.id %}" class="n_link"><img class="icon" src="{% static 'network/person-fill.svg' %}">Profile</a>
         </div>
         <div>
             <hr>
