--- a/project4/network/templates/network/login.html
+++ b/project4/network/templates/network/login.html
@@ -1,6 +1,7 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
+<div class="space">
     <h2>Login</h2>
 
     {% if message %}
@@ -19,5 +20,5 @@
     </form>
 
     <div class="info">Don't have an account? <a class="info_link"href="{% url 'register' %}">Register here.</a></div>
-
+</div>
 {% endblock %}
