--- a/project4/network/static/network/f.css
+++ b/project4/network/static/network/f.css
@@ -209,6 +209,7 @@ body{
   font-size: 21px;
   padding: 70px 0px 0px 30px;
   height: 200px;
+  margin-bottom: 150px;
 }
 
 .line{
@@ -221,4 +222,7 @@ body{
   display:flex;
   flex-direction: column;
   align-items: center;
+}
+.posts{
+  margin: 0px 20px;
 }
