--- a/project4/network/templates/network/profile.html
+++ b/project4/network/templates/network/profile.html
@@ -9,12 +9,13 @@
     <div class="box2">
         {% if user.is_authenticated %}
             {% if user != user1 %}
-                <form>
+                <form method="post" action="{{user1.id}}">
                     {% csrf_token %}
-                    <input type="hidden">
                     {% if user in user1.followers.all %}
+                        <input type="hidden" value="unfollow" name="followers">
                         <button class="post follow" style="width: 150px !important;">Unfollow</button>
-                    {% else %} 
+                    {% else %}
+                        <input type="hidden" value="follow" name="followers"> 
                         <button class="post follow">Follow</button>
                     {% endif %}  
                 </form>
@@ -44,5 +45,31 @@
             <div class="information"><div class="text-muted">Following</div><strong>{{user1.following.count}}</strong></div>
             </div>
     </div>
-    
+    <ul class="posts list-group list-group-flush">
+        {% for post in user1.posts.all %}
+        <li class="shadow-sm bg-body-tertiary rounded list-group-item">
+            <div style="display:flex">
+                <div style="margin-right:15px"><img src='{{ post.user.image.url }}' alt='Profile Image' class='prof_img' style="position:static"></div>
+                <div>
+                    <div style="display:flex">
+                        <a href="{% url 'profile' post.user.id %}" class="p_link"><div style="margin-right:8px"><strong>{{post.user.username}}</strong></div></a>
+                        <div class="text-muted">{{post.user.email}}</div>
+                    </div>
+                    <div class="text-muted" style="font-size: 13px; margin-bottom: 10px;">{{post.time}}</div>
+                    <div>{{post.text}}</div>
+                    <hr style="margin-bottom: 1px;">
+                    <div style="display:flex; cursor:pointer">
+                        <div class="like" style="margin-right:17px">
+                            <img class="like_img"src="static/network/heart.svg">
+                            <div style="display: inline-block;" id="num">0</div>
+                        </div>
+                        <div><img src="static/network/chat-left.svg"> 0</div>
+                    </div>
+                </div>
+            </div>
+        </li>
+        {% empty %}
+            <h4>No posts yet.</h4>
+        {% endfor %}
+    </ul>
 {% endblock %}
