--- a/project4/network/templates/network/profile.html
+++ b/project4/network/templates/network/profile.html
@@ -46,7 +46,7 @@
             </div>
     </div>
     <ul class="posts list-group list-group-flush">
-        {% for post in user1.posts.all %}
+        {% for post in posts %}
         <li class="shadow-sm bg-body-tertiary rounded list-group-item">
             <div style="display:flex">
                 <div style="margin-right:15px"><img src='{{ post.user.image.url }}' alt='Profile Image' class='prof_img' style="position:static"></div>
@@ -60,10 +60,17 @@
                     <hr style="margin-bottom: 1px;">
                     <div style="display:flex; cursor:pointer">
                         <div class="like" style="margin-right:17px">
-                            <img class="like_img"src="static/network/heart.svg">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gray" class="bi bi-heart" viewBox="0 0 16 16">
+                                <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                            </svg>
                             <div style="display: inline-block;" id="num">0</div>
                         </div>
-                        <div><img src="static/network/chat-left.svg"> 0</div>
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gray" class="bi bi-chat-left" viewBox="0 0 16 16">
+                                <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                            </svg>
+                            0
+                        </div>
                     </div>
                 </div>
             </div>
