--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -16,20 +16,20 @@
         <ul class="list-group list-group-flush">
             {% for post in posts %}
             <li class="shadow-sm bg-body-tertiary rounded list-group-item">
-                <div style="display:flex">
-                    <div style="margin-right:15px"><img src='{{ post.user.image.url }}' alt='Profile Image' class='prof_img' style="position:static"></div>
+                <div class="fx">
+                    <div class="prof_img_div"><img src='{{ post.user.image.url }}' alt='Profile Image' class='prof_img' style="position:static"></div>
                     <div>
-                        <div style="display:flex">
-                            <a href="{% url 'profile' post.user.id %}" class="p_link"><div style="margin-right:8px"><strong>{{post.user.username}}</strong></div></a>
+                        <div class="fx">
+                            <a href="{% url 'profile' post.user.id %}" class="p_link"><div class="username"><strong>{{post.user.username}}</strong></div></a>
                             <div class="text-muted">{{post.user.email}}</div>
                         </div>
-                        <div class="text-muted" style="font-size: 13px; margin-bottom: 10px;">{{post.time}}</div>
+                        <div class="time text-muted">{{post.time}}</div>
                         <div>{{post.text}}</div>
-                        <hr style="margin-bottom: 1px;">
-                        <div style="display:flex; cursor:pointer">
-                            <div class="like" style="margin-right:17px">
+                        <hr class="hr1">
+                        <div class="fx pointer">
+                            <div class="like">
                                 <img class="like_img"src="static/network/heart.svg">
-                                <div style="display: inline-block;" id="num">0</div>
+                                <div class="ilbk"id="num">0</div>
                             </div>
                             <div><img src="static/network/chat-left.svg"> 0</div>
                         </div>
