--- a/project4/network/templates/network/following.html
+++ b/project4/network/templates/network/following.html
@@ -8,22 +8,22 @@
         <ul class="list-group list-group-flush">
             {% for post in posts %}
             <li class="shadow-sm bg-body-tertiary rounded list-group-item">
-                <div style="display:flex">
-                    <div style="margin-right:15px"><img src='{{ post.user.image.url }}' alt='Profile Image' class='prof_img' style="position:static"></div>
+                <div class="fx">
+                    <div class="prof_img_div"><img src='{{ post.user.image.url }}' alt='Profile Image' class='prof_img' style="position:static"></div>
                     <div>
-                        <div style="display:flex">
-                            <a href="{% url 'profile' post.user.id %}" class="p_link"><div style="margin-right:8px"><strong>{{post.user.username}}</strong></div></a>
+                        <div class="fx">
+                            <a href="{% url 'profile' post.user.id %}" class="p_link"><div class="username"><strong>{{post.user.username}}</strong></div></a>
                             <div class="text-muted">{{post.user.email}}</div>
                         </div>
-                        <div class="text-muted" style="font-size: 13px; margin-bottom: 10px;">{{post.time}}</div>
+                        <div class="time text-muted">{{post.time}}</div>
                         <div>{{post.text}}</div>
-                        <hr style="margin-bottom: 1px;">
-                        <div style="display:flex; cursor:pointer">
-                            <div class="like" style="margin-right:17px">
+                        <hr class="hr1">
+                        <div class="fx pointer">
+                            <div class="like">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gray" class="bi bi-heart" viewBox="0 0 16 16">
                                     <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                                 </svg>
-                                <div style="display: inline-block;" id="num">0</div>
+                                <div class="ilbk" id="num">0</div>
                             </div>
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gray" class="bi bi-chat-left" viewBox="0 0 16 16">
