--- a/project4/network/static/network/y.css
+++ b/project4/network/static/network/y.css
@@ -98,6 +98,16 @@
   form{
     text-align: center;
   }
+  .edit_form{
+    text-align: left;
+  }
+  .input_edit{
+    width:75%;
+    text-align: left;
+    outline: unset;
+    border:none;
+    border-bottom: 1px solid grey;
+  }
   .new_post{
     border:none;
     padding:15px 50px 90px 80px;
@@ -136,7 +146,7 @@
 
 
   /* buttons */
-  .post{
+  .post, .edit{
     width: 100px !important;
     position:absolute;
     right:15px;
@@ -159,11 +169,25 @@
     font-weight: 700;
     color: white;
     background-color:#AA6FF6;
-    transition: background-color 0.5s;
+    transition: background-color 0.3s;
   }
   .navigation_bar button:hover,.btn-violet:hover, .post:hover{
     background-color: #513575;
     color:white
+  }
+  .edit{
+    padding: 10px 20px;
+    text-align: center;
+    color: #513575;
+    background-color: #bea4e0;
+    margin-top: 10px;
+    border:unset;
+    border-radius: 30px;
+    font-weight: 700;
+    transition: background-color 0.5s;
+  }
+  .edit:hover{
+    background-color: #d8c4f0;
   }
 
   /* page content */
@@ -268,6 +292,12 @@ body{
 }
 .pointer{
   cursor:pointer
+}
+.between{
+  justify-content: space-between;
+}
+.user_content{
+  width:100%;
 }
 
 /* inline block */
