--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -6,7 +6,11 @@
         <title>{% block title %}Social Network{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'network/y.css' %}" rel="stylesheet">
-        <script src="{% static 'network/net.js'%}"></script>
+        <script>
+          const csrf_token = `{% csrf_token %}`;
+          const url_index = `{% url 'index' %}`
+        </script>
+        <script src="{% static 'network/network.js'%}"></script>
     </head>
     <body>
       <div class="navigation_bar shadow-sm p-3 mb-5 bg-body-tertiary rounded">
