--- a/project4/network/templates/network/profile.html
+++ b/project4/network/templates/network/profile.html
@@ -50,13 +50,18 @@
         <li class="shadow-sm bg-body-tertiary rounded list-group-item">
             <div class="fx">
                 <div class="prof_img_div"><img src='{{ post.user.image.url }}' alt='Profile Image' class='prof_img' style="position:static"></div>
-                <div>
-                    <div class="fx">
-                        <a href="{% url 'profile' post.user.id %}" class="p_link"><div class="username"><strong>{{post.user.username}}</strong></div></a>
-                        <div class="text-muted">{{post.user.email}}</div>
+                <div class="user_content">
+                    <div class="fx between">
+                        <div class="fx">
+                            <a href="{% url 'profile' post.user.id %}" class="p_link"><div class="username"><strong>{{post.user.username}}</strong></div></a>
+                            <div class="text-muted">{{post.user.email}}</div>
+                        </div>
+                        {% if user == post.user %}
+                        <div><button class="edit" data-id="{{post.id}}">Edit</button></div>
+                        {% endif %}
                     </div>
                     <div class="time text-muted">{{post.time}}</div>
-                    <div>{{post.text}}</div>
+                    <div  class="post_content" data-content="{{post.text}}" data-id="{{post.id}}">{{post.text}}</div>
                     <hr class="hr1">
                     <div class="fx pointer">
                         <div class="like">
