--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -46,22 +46,32 @@
             {% endfor %}
         </ul>
     </div>
-    <div class="pagination">
-        <span class="step-links">
+    <nav aria-label="pagination">
+        <ul class="pagination">
             {% if posts.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ posts.previous_page_number }}">previous</a>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ posts.previous_page_number }}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
             {% endif %}
-    
-            <span class="current">
-                Page {{ posts.number }} of {{ posts.paginator.num_pages }}.
-            </span>
-    
+            {% for page in posts.paginator.page_range%}
+                {% if page == posts.number %}
+                <li class="page-item active" aria-current="page">
+                    <a class="page-link" href="?page={{posts.number}}">{{posts.number}}<span class="sr-only">(current)</span></a>
+                  </li>
+                {% else %}
+                <li class="page-item"><a class="page-link" href="?page={{page}}">{{page}}</a></li>
+                {% endif %}
+            {% endfor %} 
             {% if posts.has_next %}
-                <a href="?page={{ posts.next_page_number }}">next</a>
-                <a href="?page={{ posts.paginator.num_pages }}">last &raquo;</a>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ posts.next_page_number }}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
             {% endif %}
-        </span>
-    </div>
+        </ul>
+      </nav>
 </div>
 {% endblock %}
