--- a/project4/network/static/network/h.css
+++ b/project4/network/static/network/h.css
@@ -307,3 +307,22 @@ body{
 .ilbk{
   display: inline-block;
 }
+
+
+/* pagination */
+.pagination .page-link {
+  color: #513575;
+}
+
+.pagination .page-item.active .page-link {
+  color: white;
+  background-color: #AA6FF6;
+  border: none
+}
+.nav_pag{
+  text-align: center;
+  display:flex;
+  justify-content: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
