--- a/project4/network/templates/network/profile.html
+++ b/project4/network/templates/network/profile.html
@@ -84,4 +84,39 @@
             <h4>No posts yet.</h4>
         {% endfor %}
     </ul>
+    <div class="nav_pag">
+        <nav aria-label="pagination">
+            <ul class="pagination">
+                {% if posts.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ posts.previous_page_number }}" aria-label="Previous">
+                {% else %}
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" aria-label="Previous">
+                {% endif %}
+                        <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                {% for page in posts.paginator.page_range%}
+                    {% if page == posts.number %}
+                    <li class="page-item active" aria-current="page">
+                        <a class="page-link" href="?page={{posts.number}}">{{posts.number}}<span class="sr-only">(current)</span></a>
+                    </li>
+                    {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{page}}">{{page}}</a></li>
+                    {% endif %}
+                {% endfor %} 
+                {% if posts.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ posts.next_page_number }}" aria-label="Next">
+                {%else%}
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" aria-label="Next">
+                {% endif %}
+                        <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+            </ul>
+        </nav>
+    </div>
 {% endblock %}
