--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -33,10 +33,21 @@
                         <hr class="hr1">
                         <div class="fx pointer">
                             <div class="like">
-                                <img class="like_img"src="static/network/heart.svg">
-                                <div class="ilbk"id="num">0</div>
+                                <div class="ilbk heart">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="rgb(209, 209, 209)" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                                      </svg>
+                                </div>
+                                <div class="ilbk" class="num_likes">0</div>
                             </div>
-                            <div><img src="static/network/chat-left.svg"> 0</div>
+                            <div>
+                                <div class="ilbk chat">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gray" class="bi bi-chat-left" viewBox="0 0 16 16">
+                                        <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                                    </svg>
+                                </div>
+                                <div class="ilbk" class="num_comments">0</div>
+                            </div>
                         </div>
                     </div>
                 </div>
