--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -11,6 +11,7 @@
           const url_index = `{% url 'index' %}`
         </script>
         <script src="{% static 'network/network.js'%}"></script>
+        <script src="{% static 'network/likes.js'%}"></script>
     </head>
     <body>
       <div class="navigation_bar shadow-sm p-3 mb-5 bg-body-tertiary rounded">
