--- a/project4/network/templates/network/following.html
+++ b/project4/network/templates/network/following.html
@@ -20,12 +20,12 @@
                         <hr class="hr1">
                         <div class="fx pointer">
                             <div class="like">
-                                <div class="ilbk heart">
+                                <div class="ilbk heart" data-id="{{post.id}}" data-user="{{user.id}}">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="rgb(209, 209, 209)" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
                                       </svg>
                                 </div>
-                                <div class="ilbk" class="num_likes">0</div>
+                                <div class="ilbk num_likes">0</div>
                             </div>
                             <div>
                                 <div class="ilbk chat">
